# kimai-ml-rust

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml
.github/workflows/: build-and-push.yml
src/: lib.rs  main.rs  types.rs
src/models/: anomaly_detection.rs  forecasting.rs  learning.rs  mod.rs  productivity.rs  recommendations.rs
src/preprocessing/: feature_engineering.rs  mod.rs  normalization.rs
